kube-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: realip-ingress-testapp
  name: realip-ingress-testapp
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 3
  selector:
    matchLabels:
      app: realip-ingress-testapp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: realip-ingress-testapp
    spec:
      containers:
      - env:
        - name: APPNAME
          value: realip-ingress-testapp
        image: joaoreis/realip-ingress-testapp:latest
        imagePullPolicy: Always
        name: realip-ingress-testapp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: realip-ingress-testapp
  labels:
    service: realip-ingress-testapp
spec:
  selector:
    app: realip-ingress-testapp
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realip-ingress-testapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: testeapp.7lan.net
    http:
      paths:
      - path: /realip-ingress-testapp
        pathType: Prefix
        backend:
          service:
            name: realip-ingress-testapp
            port:
              number: 8000
